fixed alignment of textarea in error messages
git-svn-id: https://meridianww.cloudapp.net/svn/M4PL/trunk@443 80c1dc9e-45f0-9747-8a74-c6ecc499fc54

--- a/M4PL/M4PL.Apln/M4PL.Apln/Content/ToasterMessages.css
+++ b/M4PL/M4PL.Apln/M4PL.Apln/Content/ToasterMessages.css
@@ -5,7 +5,7 @@
 }
 
 .textareaWidth {
-    width: 85%;
+    width: 100%;
 }
 
 .popBtnWidth {
